--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "3.0.2",
+    "react-table": "^6.5.1",
     "react-tap-event-plugin": "^2.0.1",
     "recharts": "^1.0.0-alpha.2"
   },
