--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "material-ui": "^0.18.7",
     "moment": "^2.18.1",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
+    "react-infinite-calendar": "^2.3.1",
     "react-router": "3.0.2",
     "react-table": "^6.5.1",
     "react-tap-event-plugin": "^2.0.1",
