--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
+    "react-datasheet": "^1.2.12",
     "react-dom": "^15.6.1",
     "react-infinite-calendar": "^2.3.1",
     "react-router": "3.0.2",
+    "react-select": "^1.0.0-rc.5",
     "react-table": "^6.5.1",
     "react-tap-event-plugin": "^2.0.1",
     "recharts": "^1.0.0-alpha.2"
